feat: move mcp to a dedicated stdio interface
